<resources>
    <string name="app_name">palFinder</string>
    <string name="title_activity_greeting" translatable="false">activity_greeting</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="image_load_failed">Sorry, we could not load the image that you requested</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="tag_element_text">tag</string>
    <string name="add_tags">Add tags</string>
    <string name="add_tags_click">Click to select tags</string>
    <string name="profile_element">name</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_meetup_creation" translatable="false">meetup_creation</string>
    <string name="search_no_location">Please provide a location</string>
    <string name="search_location_not_found">Location not found</string>
    <string name="skip_connection"> Skip connection </string>
    <string name="cancel"> Cancel</string>
    <string name="continu"> Continue</string>
    <string name="login"> Login</string>
    <string name="no_account_warning">Without connecting with an account, you won\'t be able to join meetup.</string>
    <string name="no_account_create"> You need an account to create a meetup.</string>
    <string name="no_account_groups"> You need an account to join groups.</string>
    <string name="no_account_join"> You need an account to join a meetUp.</string>
    <string name="no_account_profile"> You need an account to have a profile.</string>
    <string name="no_account_follow"> You need an account to follow a Pal.</string>
    <string name="qr_scan_follow_account"> Do you want to follow this account?</string>
    <string name="qr_scan_join_meetup">Do you want to join this meetup ?</string>
    <string name="developer">You are the joyful cornerStone of the palFinderTeam !</string>
    <string name="verified">Let me check.. Yes ! You are verified !</string>
    <string name="pal_finder">Everyone must start somewhere.. (follow 1 pal)</string>
    <string name="pal_miner">You are a pal and you\'re digging a hole.. (follow 5 pals)</string>
    <string name="pal_tracker">We\'re missing paper to track your pals ! (follow 10 pals)</string>
    <string name="paldex_completed">You\'re the ultimate fan, you have completed the paldex ! (follow 25 pals)</string>
    <string name="the_beauty_and_the_pal">Ready for a date with your n°1 fan ? (1 fan)</string>
    <string name="crypto_pal">Time to launch your own NFT ! To the moon ! (5 fans)</string>
    <string name="master_of_cats">You\'re so famous even the catMaster has heard of you ! (10 fans)</string>
    <string name="ultimate_pal">Your own religion will rise to the moon, conquer the solar system, fly to Andromeda ! (25 fans)</string>
    <string name="meetup_creation_meetup_name">Event Name</string>
    <string name="meetup_creation_meetup_name_example" translatable="false">Party with the boys!</string>
    <string name="meetup_creation_meetup_description">Event Description</string>
    <string name="meetup_creation_meetup_icon">Icon</string>
    <string name="meetup_creation_meetup_start_date">Start Date</string>
    <string name="meetup_creation_meetup_end_date">End Date</string>
    <string name="meetup_creation_meetup_duration">Duration</string>
    <string name="meetup_creation_meetup_location">Location</string>
    <string name="meetup_creation_meetup_has_participant_limit">Has Participant Limit?</string>
    <string name="meetup_creation_meetup_participant_limit">Participant Limit</string>
    <string name="meetup_creation_meetup_start_date_bt">Select Start Date</string>
    <string name="meetup_creation_meetup_end_date_bt">Select End Date</string>
    <string name="meetup_creation_meetup_tags">Tags</string>
    <string name="meetup_creation_meetup_no_tags">No Tags Selected</string>
    <string name="meetup_creation_meetup_tags_bt">Add Tags</string>
    <string name="meetup_creation_meetup_entries">participants</string>
    <string name="meetup_creation_meetup_done">Done</string>
    <string name="meetup_creation_meetup_select_location">Pick Location</string>
    <string name="meetup_creation_meetup_location_not_selected">Location not selected</string>
    <string name="meetup_creation_meetup_main_description">Set the general information about your Meetup! Add a catchy title, a short description, and specify where the even will take place.</string>
    <string name="meetup_creation_meetup_create">Create a Meetup</string>
    <string name="meetup_creation_meetup_location_desc">Tap to choose the perfect location for you Meetup!</string>
    <string name="meetup_creation_meetup_marker_desc">Tap to chose your marker</string>
    <string name="meetup_creation_meetup_date">When do you plan this event?</string>
    <string name="meetup_creation_meetup_date_desc">Select a start and end date/time</string>
    <string name="meetup_creation_meetup_tags_desc">Put your Meetup into categories with Tags, so that people can find it easily</string>
    <string name="meetup_creation_meetup_miscellaneous">Miscellaneous</string>
    <string name="meetup_creation_meetup_miscellaneous_desc">Making sure your meetup is perfect!</string>
    <string name="meetup_creation_meetup_picture_desc">Tap the picture above to change the icon of your Meetup.</string>
    <string name="meetup_creation_meetup_criteria_desc">Tap to select criteria for the meeting, such as the age, gender.</string>
    <string name="criteria">criteria</string>
    <string name="list_sort_by_alphabetical_order">Sort by Alph.</string>
    <string name="list_sort_by_capacity">Sort by Cap.</string>
    <string name="list_sort_by_location">Sort by Dist.</string>
    <string name="list_sort_menu">Sort</string>
    <string name="meetup_creation_missing_name_desc">Please add an Event Name, an Event Description and a location</string>
    <string name="meetup_creation_missing_name_desc_title">Missing Data</string>
    <string name="meetup_creation_icon_title">Tap to chose your marker</string>
    <string name="meetup_creation_icon_hint">Change the icon of the meetup directly on the map to make it stand out!</string>
    <string name="meetup_filter_show_all">All meetups</string>
    <string name="meetup_filter_only_participating">My pals taking part</string>
    <string name="meetup_only_creators">Created by my Pals</string>
    <string name="meetup_filter_only_joined">Joined meetups only</string>
    <string name="meetup_filter_trend">Trend list</string>
    <string name="meetup_filter_title">Filter meetups</string>
    <string name="meetup_filter_btn">Filter by</string>
    <string name="meetup_filter_subtitle">Select an option to narrow down the displayed results</string>
    <string name="meetup_filter_date_title">Select specific dates</string>
    <string name="meetup_filter_date_desc">To not set any date constraints, leave the fields blank</string>
    <string name="meetup_filter_done">Confirm filters</string>
    <string name="meetup_new_participant">\@%s joined your meetup!</string>
    <string name="easter_egg_fragment_text">Watch out and take notes !</string>
    <string name="meetup_view_meetup_start_at">Starts</string>
    <string name="meetup_view_meetup_end_at">Ends</string>
    <string name="meetup_view_creator">Created by @%1$s</string>
    <string name="meetup_view_join">Join</string>
    <string name="meetup_view_leave">Leave</string>
    <string name="meetup_view_joined">You joined the meetup</string>
    <string name="meetup_view_left">You left the meetup</string>
    <string name="meetup_view_muted">You muted the meetup</string>
    <string name="meetup_view_unmuted">You unmuted the meetup</string>
    <string name="meetup_with_blocked">You cannot join this meetup, you blocked the creator.</string>
    <string name="meetup_where_you_are_blocked">You cannot join this meetup, you are blocked by creator.</string>
    <string name="meetup_view_participation_unlimited">%d</string>
    <string name="meetup_view_participation_limited" formatted="true">%d (out of %d)</string>
    <string name="meetup_view_age_min">13</string>
    <string name="meetup_view_age_max">66</string>
    <string name="meetup_view_age_max_plus">66+</string>
    <string name="meetup_view_meetup">Meetup</string>
    <string name="meetup_view_event_name" translatable="false">This is a very long event name</string>
    <string name="meetup_view_created_by">Organized by \@%s</string>
    <string name="meetup_view_time_date">Time and dates</string>
    <string name="meetup_view_start_date" translatable="false">10th of April 2022 at 14:00</string>
    <string name="meetup_view_end_date" translatable="false">12th of April 2022 at 14:00</string>
    <string name="meetup_view_other_info">Other info</string>
    <string name="meetup_view_people">People</string>
    <string name="meetup_view_age_text">Age</string>
    <string name="meetup_view_age" formatted="true">%s-%s years</string>
    <string name="meetup_view_gender_title">Gender</string>
    <string name="meetup_with_blocked_warning">A user you blocked is participating in this meetup, are you sure you want to join ?</string>
    <string name="ok">OK</string>
    <string name="date_long_format">EEEE, MMMM d, yyyy \'at\' h:mm a</string>
    <string name="date_very_short_format">h:mm</string>
    <string name="date_short_format">d MMMM</string>
    <string name="date_medium_format">d MMMM yyyy</string>
    <string name="placeholder_name" translatable="false">someone</string>
    <string name="placeholder_username">\@username</string>
    <string name="placeholder_date">yyyy/mm/dd</string>
    <string name="placeholder_follows" translatable="false">50</string>
    <string name="following_handle_title">Following</string>
    <string name="followers_handle_title">Followers</string>
    <string name="following_nb" translatable="false">%d</string>
    <string name="followers_nb" translatable="false">%d</string>
    <string name="desc_name">— About me</string>
    <string name="placeholder_desc" translatable="false">Hello, I am a placeholder description. I am long enough so that I break onto another line, hopefully, but if not then I will add some extra text.</string>
    <string name="no_desc">No bio provided…</string>
    <string name="private_name">Private profile</string>
    <string name="private_desc">This user has set his profile to private</string>
    <string name="profile_last_attended">Last attended</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="limit_people">Limit participation to</string>
    <string name="DB_error_msg">Cannot contact database</string>
    <string name="criterions_title">Meetup Criteria</string>
    <string name="criterions_age_title">Select an age interval</string>
    <string name="criterions_age_min">13</string>
    <string name="criterions_age_max">66</string>
    <string name="criterions_gender_title">Select gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_male_and_female">Any</string>
</resources>