<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meetups.activities.MeetUpCreation">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="600dp"
        android:scrollIndicators="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/tv_ViewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_name" />

            <EditText
                android:id="@+id/et_EventName"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/meetup_creation_meetup_name_example" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_description" />

            <EditText
                android:id="@+id/et_Description"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_Icon"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/bt_SelectIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_StartDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_start_date" />

            <TextView
                android:id="@+id/tv_StartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_long_format" />

            <Button
                android:id="@+id/bt_SelectStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onStartTimeSelectButton"
                android:text="@string/meetup_creation_meetup_start_date_bt" />

            <TextView
                android:id="@+id/tv_EndDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_end_date" />

            <TextView
                android:id="@+id/tv_EndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_long_format" />

            <Button
                android:id="@+id/bt_SelectEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onEndTimeSelectButton"
                android:text="@string/meetup_creation_meetup_end_date_bt" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_TagsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_tags" />

            <TextView
                android:id="@+id/tv_Tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_no_tags" />

            <Button
                android:id="@+id/bt_AddTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_tags_bt" />

            <Button
                android:id="@+id/bt_Done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDone"
                android:text="@string/meetup_creation_meetup_done" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>