<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_MeetupImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_normal"
                android:text="@string/meetup_view_meetup"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ViewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/fredoka_bolder"
                android:text="@string/meetup_view_event_name"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_ViewEventCreator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_bold"
                android:onClick="onChat"
                android:paddingBottom="18dp"
                android:text="@string/meetup_view_created_by"
                android:textColor="@color/theme_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_ViewEventDescritpion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_bold"
                android:layout_marginTop="6dp"
                android:text="@string/placeholder_desc"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/fredoka_bold"
                android:gravity="center|left"
                android:text="@string/meetup_view_time_date"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_month_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_view_meetup_start_at"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ViewStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_bold"
                    android:text="@string/meetup_view_start_date"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_view_meetup_end_at"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ViewEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_bold"
                    android:text="@string/meetup_view_end_date"
                    android:textSize="18sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/fredoka_bold"
                android:gravity="center|left"
                android:text="@string/meetup_view_other_info"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_person_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_view_people"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ViewParticipants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_bold"
                    android:text="@string/meetup_view_participation_unlimited"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_view_age"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ViewAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_bold"
                    android:text="@string/meetup_view_age_interval"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_view_gender_title"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ViewGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_bold"
                    android:text=""
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
