<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/age_selector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/gender_selector"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="11dp">

        <TextView
            android:id="@+id/criterions_age_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_normal"
            android:gravity="center"
            android:text="@string/criterions_age_title"
            app:layout_constraintBottom_toTopOf="@+id/ageSeekBar"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="28dp" />

        <TextView
            android:id="@+id/maxValueAge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/fredoka_normal"
            android:gravity="center"
            android:text="@string/criterions_age_max"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ageSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/criterions_age_title" />

        <FrameLayout
            android:id="@+id/ageSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/maxValueAge"
            app:layout_constraintStart_toStartOf="@id/minValueAge"
            app:layout_constraintTop_toBottomOf="@id/criterions_age_title">

        </FrameLayout>

        <TextView
            android:id="@+id/minValueAge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/fredoka_normal"
            android:gravity="center"
            android:text="@string/criterions_age_min"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ageSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/criterions_age_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gender_selector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/age_selector"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/gender_selection_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_normal"
            android:gravity="center"
            android:text="@string/criterions_gender_title"
            app:layout_constraintBottom_toTopOf="@+id/radioSex" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_selection_title">

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_normal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_female"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/fredoka_normal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioMaleAndFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/fredoka_normal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_male_and_female"
                android:textSize="16sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/criterionButtonDone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/meetup_creation_meetup_done"
        app:layout_constraintTop_toBottomOf="@+id/gender_selector"
        tools:layout_editor_absoluteX="185dp" />

</androidx.constraintlayout.widget.ConstraintLayout>